--- a/data/machine_vars.yaml
+++ b/data/machine_vars.yaml
@@ -1,3 +1,6 @@
 player1_score:
   expire: !!null 'null'
-  value: 92400
+  value: 1654000
+player2_score:
+  expire: !!null 'null'
+  value: 1804500
