--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -9,6 +9,13 @@ shot_profiles:
           - name: lit
             show: "flash"
 
+#Extra Balls
+extra_balls:
+  meatextraball:
+    enabled: true
+    award_events: award_meatextraball
+    max_per_game: 2
+
 #Shots
 shots:
   spinner:
@@ -58,6 +65,7 @@ event_player:
   ball_started:
     item_collected
     recalculate_worldjackpot
+    collectitem_special_enabled
 
   collectitem1_hit:
     item_collected
@@ -71,6 +79,11 @@ event_player:
   #ENABLE VILLAGER MULTIBALL 
   logicblock_counter_villagermultiball_complete:
     villagermultiball_ready
+  logicblock_counter_meatextraball_complete:
+    - collectitem_special_disabled
+    - award_meatextraball
+
+  
 
   #RECALCULATE WORLD JACKPOT
   player_world_jackpot_base:
@@ -152,7 +165,14 @@ counters:
       count_complete_value: 20
       restart_events: multiball_nightmb_ended,multiball_villagermb_ended, ball_started
       disable_events: villagermb_disable
-      enable_events: ball_started
+      enable_events: mode_base_started
+      persist_state: true
+   counter_meatextraball:
+      count_events: collectitem_special_hit
+      starting_count: 0
+      count_interval: 1
+      count_complete_value: 10
+      enable_events: mode_base_started
       persist_state: true
 
 multiball_locks:
@@ -323,11 +343,17 @@ sound_player:
   s_rightoutlane_active: lane_swish
   s_leftinlane_active: lane_swish
   s_leftoutlane_active: lane_swish
+
+  #EXTRA BALL
+  collectitem_special_hit:
+    meatextraballsp: 
+      action: play
+      loops: 1
+  #VILLAGER MULTIBALL
   s_spinner_active: 
     villagersp: 
       action: play
       loops: 1
-  #VILLAGER MULTIBALL
   villagermultiball_ready:
     villager_multiball_ready
       
@@ -376,6 +402,8 @@ light_player:
     l_spinner2: off
     l_spinner3: off
     l_spinner4: off
+  extra_ball_meatextraball_awarded:
+    l_shootagain: white
 
 #This is for achieving the worlds
 achievements:
@@ -496,6 +524,17 @@ slides:
         font_name: ARLRDBD
         font_size: 25
         y: top-100
+        x: left+100
+        z: 100
+        anchor_x: left
+        anchor_y: top
+      - type: text        #WORLD JACKPOT
+        text: Extra Ball Progress - (player|counters.counter_extraball.value)
+        number_grouping: true
+        min_digits: 2
+        font_name: ARLRDBD
+        font_size: 25
+        y: top-150
         x: left+100
         z: 100
         anchor_x: left
