--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -21,6 +21,7 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
+  world1_collected: travel_ready
 
 variable_player:
   #setup environment variables
