--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -21,6 +21,7 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
+  world3_collected: travel_ready
 
 variable_player:
   #setup environment variables
