--- a/modes/world4/config/world4.yaml
+++ b/modes/world4/config/world4.yaml
@@ -21,7 +21,8 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
-
+  world4_collected: travel_ready
+  
 variable_player:
   #setup environment variables
   mode_world4_started:  
