--- a/modes/villagermb/config/villagermb.yaml
+++ b/modes/villagermb/config/villagermb.yaml
@@ -39,8 +39,10 @@ shots:
     
 event_player:
   mode_villagermb_started:
-    outlanegate_restart
-
+    outlanegate_close
+  villager_jackpot_hit:
+    outlanegate_open
+    
 #play hurry up sound effect
 sound_player:
   villager_jackpot_hit:
