--- a/modes/tools/config/tools.yaml
+++ b/modes/tools/config/tools.yaml
@@ -67,6 +67,75 @@ light_player:
   crafting_enabled:
     l_craftlit: white
 
+  display_tools{current_player.shovel==1}:
+    l_tool1: Brown
+  display_tools{current_player.axe==1}:
+    l_tool2: Brown
+  display_tools{current_player.pickaxe==1}:
+    l_tool3: Brown
+  display_tools{current_player.sword==1}:
+    l_tool4: Brown
+
+  display_tools{current_player.shovel==2}:
+    l_tool1: MidnightBlue
+  display_tools{current_player.axe==2}:
+    l_tool2: MidnightBlue
+  display_tools{current_player.pickaxe==2}:
+    l_tool3: MidnightBlue
+  display_tools{current_player.sword==2}:
+    l_tool4: MidnightBlue
+
+  display_tools{current_player.shovel==3}:
+    l_tool1: Silver
+  display_tools{current_player.axe==3}:
+    l_tool2: Silver
+  display_tools{current_player.pickaxe==3}:
+    l_tool3: Silver
+  display_tools{current_player.sword==3}:
+    l_tool4: Silver
+
+  display_tools{current_player.shovel==4}:
+    l_tool1: Yellow
+  display_tools{current_player.axe==4}:
+    l_tool2: Yellow
+  display_tools{current_player.pickaxe==4}:
+    l_tool3: Yellow
+  display_tools{current_player.sword==4}:
+    l_tool4: Yellow
+
+  display_tools{current_player.shovel==5}:
+    l_tool1: Teal
+  display_tools{current_player.axe==5}:
+    l_tool2: Teal
+  display_tools{current_player.pickaxe==5}:
+    l_tool3: Teal
+  display_tools{current_player.sword==5}:
+    l_tool4: Teal
+
+  display_tools{current_player.bonus_multiplier==2}:
+    l_bonus2x: MidnightBlue
+    l_bonus3x: off
+    l_bonus4x: off
+    l_bonus5x: off
+  display_tools{current_player.bonus_multiplier==3}:
+    l_bonus2x: MidnightBlue
+    l_bonus3x: Silver
+    l_bonus4x: off
+    l_bonus5x: off
+  display_tools{current_player.bonus_multiplier==4}:
+    l_bonus2x: MidnightBlue
+    l_bonus3x: Silver
+    l_bonus4x: Yellow
+    l_bonus5x: off
+  display_tools{current_player.bonus_multiplier==5}:
+    l_bonus2x: MidnightBlue
+    l_bonus3x: Silver
+    l_bonus4x: Yellow
+    l_bonus5x: Teal
+
+event_player:
+  mode_tools_started:
+    display_tools
 
 state_machines:
   tools_ready:
